# ecos-ebui

./: Cargo.toml  README.md
.cargo/: config.toml
examples/: graphics_api.rs  pure_ebd_api.rs  pure_rs_c_api.rs  pure_rs_wrapper.rs
src/: lib.rs
src/adapter/: delay.rs  gpio.rs  mod.rs  spi.rs
src/driver/: mod.rs  st7735.rs
